run_java_code/builds/4/log
Started by user [8mha:////4C8akHnSJBXqoC6GWR8S/JMW6yJHQfuJFWc+LXc/Bi/ZAAAAnx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAy+EgZh/dLi1CL9jNTcxLyS3MSMxPLUIgDKn4KFyAAAAA==[0mhemant mahawer
Running as SYSTEM
Building in workspace C:\Users\Hemant Mahawer-3348\.jenkins\workspace\run_java_code
[run_java_code] $ cmd /c call C:\Users\HEMANT~1\AppData\Local\Temp\jenkins6028481104910440851.bat

C:\Users\Hemant Mahawer-3348\.jenkins\workspace\run_java_code>cd C:\Users\Hemant Mahawer-3348\.jenkins\workspace 

C:\Users\Hemant Mahawer-3348\.jenkins\workspace>javac java_test.java 
java_test.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

C:\Users\Hemant Mahawer-3348\.jenkins\workspace>exit 1 
Build step 'Execute Windows batch command' marked build as failure
Finished: FAILURE
